# under-topo-nav

./: .gitignore  LICENSE  README.md  clear_debug.py  debug.txt  pruebas.py  read_debug.py
automatic_testing/: CMakeLists.txt  package.xml
ayudas/: constant_service_call.py  plot_all.py  plot_image.py  plot_nn_results.py  pruebas.py
dataset_generation/: CMakeLists.txt  package.xml  setup.py  tile_names.txt
detection_vector_analysis/: CMakeLists.txt  package.xml
gallery_detection/: CMakeLists.txt  package.xml  setup.py
gallery_detection/launch/: gallery_detection.launch
gallery_detection/nodes/: e.py  network_node.py  output_filtering_node.py  plot_output.py
gallery_detection/scripts/: dataset_exploration.py  old_dataset_to_new.ipynb  test_network.py  train_network.py
gallery_detection/src/laserscan_image_nn/: nn_definitions.py  nn_definitions2.py
gallery_detection/src/training_utils/: ImageDataset.py  data_utils.py  training_utils.py
gallery_navigation/: CMakeLists.txt  package.xml
gallery_tracking/: CMakeLists.txt  package.xml
heading_control/: CMakeLists.txt  package.xml
laserscan_image_nn/: CMakeLists.txt
pointcloud_to_image/: CMakeLists.txt  package.xml  pyproject.toml  setup.py
pointcloud_to_image/launch/: ptcl_to_img.launch  scan_to_bev_img.launch  scan_to_img.launch
pointcloud_to_image/nodes/: conversion_node.py  ptcl_to_img_node.py  scan_to_bev_image.py
pointcloud_to_image/src/pointcloud_to_image/: __init__.py  conversion_functions.py
robot_launch/: package.xml
topo_gui/: CMakeLists.txt  package.xml
(+207 files in other folders)
