<?xml version="1.0"?>
<package format="2">
  <name>gallery_detection</name>
  <version>0.0.0</version>
  <description>Package containing the gallery detection system for LIDAR readings</description>


  <maintainer email="lorenzo@todo.todo">lorenzo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
