[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
[project]
authors = [
  {name = "Lorenzo Cano", email = "lcano@unizar.es"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "matplotlib"
]
description = "Package with different conversion function from laser ptcl or laser scans to images"
name = "PtclToImg"
readme = "README.md"
requires-python = ">=3.6"
version = "0.0.1"
[tool.hatch.build.targets.wheel]
packages = ["src/*"]

